kubernetes/apps/default/homepage/templates/network_policy.yaml
---
# yaml-language-server: $schema=https://deedee-ops.github.io/schemas/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: homepage
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: homepage
    egress:
      - toPorts:
          - ports:
              # nginx
              - port: "80"
                protocol: TCP
              - port: "443"
                protocol: TCP
              # docker
              - port: "2376"
                protocol: TCP
        toCIDRSet:
          - cidr: "<path:kubernetes/data/internal/base#IP_SUPERVISOR>/32"
      - toFQDNs:
          - matchName: api.github.com  # for releases
